clusters/rpi/apps/zula/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zula
  labels:
    app.kubernetes.io/name: zula
