clusters/rpi/apps/zula/web-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: zula
  labels:
    app.kubernetes.io/name: zula-web
    app.kubernetes.io/part-of: zula
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zula-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zula-web
        app.kubernetes.io/part-of: zula
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: web
          image: ghcr.io/bieniucieniu/zula/web-app:latest@sha256:b93446c4251a9e296323474016a8a0034bb4338a3d73c8b35cb9a2d22d582b95 # {"$imagepolicy": "flux-system:zula-web-app"}
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: zula
  labels:
    app.kubernetes.io/name: zula-web
    app.kubernetes.io/part-of: zula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zula-web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
