clusters/rpi/apps/zula/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: zula
  labels:
    app.kubernetes.io/name: zula-backend
    app.kubernetes.io/part-of: zula
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zula-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zula-backend
        app.kubernetes.io/part-of: zula
    spec:
      serviceAccountName: zula-backend
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: backend
          image: ghcr.io/bieniucieniu/zula/server:latest@sha256:7be9b3d873a1a6a056a71b59e964482d7ef3e45ecbe28d4a4e7d7957e49d943d # {"$imagepolicy": "flux-system:zula-server"}
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: zula
  labels:
    app.kubernetes.io/name: zula-backend
    app.kubernetes.io/part-of: zula
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zula-backend
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
