clusters/rpi/apps/zula/grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: zula-grpc
  namespace: zula
  labels:
    app.kubernetes.io/name: zula
    app.kubernetes.io/part-of: zula
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
      sectionName: web
  hostnames:
    - zula-api.kurwidolek.com
  rules:
    - backendRefs:
        - name: backend
          port: 50051
