clusters/rpi/apps/zula/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zula
  namespace: zula
  labels:
    app.kubernetes.io/name: zula
    app.kubernetes.io/part-of: zula
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
      sectionName: web
  hostnames:
    - zula.kurwidolek.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 8000
